applications/openeuler-ipb/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-ipb
  name: openeuler-ipb
