applications/openeuler-ipb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openeuler-ipb-service
  namespace: openeuler-ipb
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: openeuler-ipb
  type: ClusterIP
